# file_hash_validator

./: .gitignore  README.md  pyproject.toml  requirements.txt  sample.json  sample.xml
src/file_hash_validator/: __main__.py  checker.py  cli.py  hashing.py  models.py  progress.py
src/file_hash_validator/parsers/: common.py  json_parser.py  xml_parser.py
tests/: test_hashing.py  test_parsers_json.py  test_parsers_xml.py
