[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "file-hash-validator"
version = "0.0.1"
description = "Утилита для проверки контрольных сумм файлов из JSON/XML файла-списка."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
file-hash-validator = "file_hash_validator.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]